<resources>
    <string name="app_name">Registration and login</string>
    <string name="login">登录</string>
    <string name="user_name">用户名：</string>
    <string name="password">密码：</string>
    <string name="register">注册</string>
    <string name="remember">记住密码</string>
    <string name="left">可尝试的剩余次数：</string>
    <string name="cancel">取消</string>
    <string name="nochance">无剩余尝试次数</string>
    <string name="signupfirst">请先注册</string>
    <string name="input">请输入用户名密码</string>
    <string name="loginsuccessfully">登陆成功</string>
    <string name="incorrect">用户名密码错误</string>
    <string name="signupsuccessfully">注册成功</string>
    <string name="notempty">用户名和密码不能为空</string>
</resources>